tdf#109077 sw textbox: fix as-char shapes with custom print area in para

Regression from d379d18666aa42031359ca8eb34b0021960347ae (oox: import
WPS shape with text as shape with textbox, 2014-06-18), the position of
the textbox should be relative to the print area of the text frame, not
to the text frame itself.

(cherry picked from commit 11d87b35474b642e99e7aa397aa18992c1bc20c9)

Conflicts:
	sw/qa/extras/layout/layout.cxx

Change-Id: I2b591dc46ad4967edd8a1691d9b100ef0d74bed3